--- a/app/index.html
+++ b/app/index.html
@@ -22,6 +22,7 @@
 							<p>Job Name: <strong>{{job.jobName}}</strong></p>
 							<p>File Number: {{job.fileNumber}}</p>
 							<p>Invoice Date: {{job.billingDate}}</p>
+							<p>Total Price: ${{job.totalPrice}}</p>
 							<br>
 						</li>
 					</ul>
@@ -42,7 +43,9 @@
 					<br>
 					<br>
 					<p>Order Index: {{orderProp}}</p>
-					<h5>Average Production Rate:</h5>
+					<p>Showing {{(jobs|filter:query).length}} Jobs</p>
+					<h5>Summed Total Price:</h5>
+					<p>{{summedTotalPrices((jobs|filter:query))}}</p>
 				</div>
 
 			</div>
