--- a/app/index.html
+++ b/app/index.html
@@ -11,16 +11,26 @@
 <body>
 
 	<div>
-		<h2>Beacon Contracting</h2>
-		<h4>Job Costing</h4>
-		<div class="containter-fluid">
+		<div class="header">
+			<h2>Beacon Contracting</h2>
+			<h4>Job Costing</h4>
+		</div>
+		<div class="main-nav">
+			<ul>
+				<li class="curb"><a href="#">5-50</a></li>
+				<li class="sidewalk"><a href="#">5-60</a></li>
+				<li class="paving"><a href="#">5-70</a></li>				
+			</ul>
+		</div>
+		<div id="job-results" class="containter-fluid">
 			<div class="row">
 				<div class="col-md-9">
 					<!-- Body Content -->
 					<ul id="triple">
 						<li ng-repeat="job in jobs | filter:query | orderBy:orderProp">
-							<p>Job Name: <strong>{{job.jobName}}</strong></p>
-							<p>File Number: {{job.fileNumber}}</p>
+							<h5>Job Name: {{job.jobName}}</h5>
+							<p><em>Job Code: {{job.jobCode}}</em></p>
+							<!-- <p>File Number: {{job.fileNumber}}</p> -->
 							<p>Invoice Date: {{job.billingDate}}</p>
 							<p>Total Price: ${{job.totalPrice}}</p>
 							<br>
@@ -44,12 +54,24 @@
 					<br>
 					<p>Order Index: {{orderProp}}</p>
 					<p>Showing {{(jobs|filter:query).length}} Jobs</p>
-					<h5>Summed Total Price:</h5>
-					<div ng-if="query == null">
-						<p>${{getSumTotalPrice(jobs)}}</p>
+					<div>
+						<h5>Summed Total Price:</h5>
+						<div ng-if="query == null">
+							<p>${{getSumTotalPrice(jobs)}}</p>
+						</div>
+						<div ng-if="query != null">
+							<p>${{getSumTotalPrice((jobs|filter:query))}}</p>	
+						</div>
 					</div>
-					<div ng-if="query != null">
-						<p>${{getSumTotalPrice((jobs|filter:query))}}</p>	
+					<div>
+						<h5>Summed Budget Hours</h5>
+						<div ng-if="query == null">
+							<p>{{getSumBudgetHrs(jobs)}}</p>
+						</div>
+						<div ng-if="query != null">
+							<p>{{getSumBudgetHrs((jobs|filter:query))}}</p>	
+						</div>
+						
 					</div>
 				</div>
 
