--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
 <body>
 
 	<div>
-		<div class="header">
+		<div class="title-bar">
 			<h2>Beacon Contracting</h2>
 			<h4>Job Costing</h4>
 		</div>
