updated jobs with budget hours

--- a/app/index.html
+++ b/app/index.html
@@ -33,6 +33,7 @@
 							<!-- <p>File Number: {{job.fileNumber}}</p> -->
 							<p>Invoice Date: {{job.billingDate}}</p>
 							<p>Total Price: ${{job.totalPrice}}</p>
+							<p>Budget Hours: {{job.budgetHrs}} hrs</p>
 							<br>
 						</li>
 					</ul>
