--- a/beacon-app/index.html
+++ b/beacon-app/index.html
@@ -1,11 +1,13 @@
 	<!doctype html>
-	<html ng-app="jobcostApp"  ng-controller="JobListCtrl">
+	<html ng-app="jobcostApp" ng-controller="JobListCtrl">
 	<head>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
 		<link rel="stylesheet" href="css/app.css">
 		<script src="bower_components/angular/angular.js"></script>
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
+
+		<script src="js/app.js"></script>
 		<script src="js/controllers.js"></script>
 		<title ng-bind-template="Beacon Jobs: {{query}}">Beacon Jobs</title>
 	</head>
