--- a/beacon-app/index.html
+++ b/beacon-app/index.html
@@ -7,6 +7,8 @@
 		<script src="bower_components/angular/angular.js"></script>
 		<script src="bower_components/angular-route/angular-route.js"></script>
 		<script src="js/app.js"></script>
+		<script src='https://cdn.firebase.com/js/client/1.1.1/firebase.js'></script>
+		<script src='https://cdn.firebase.com/libs/angularfire/0.8.0/angularfire.min.js'></script>
 		<script src="js/controllers.js"></script>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 		<title>Beacon Jobs</title>
