--- a/beacon-app/index.html
+++ b/beacon-app/index.html
@@ -11,6 +11,7 @@
 		<script src='https://cdn.firebase.com/libs/angularfire/0.8.0/angularfire.min.js'></script>
 		<script src="js/controllers.js"></script>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+		<script src="fasterBack.js" type="text/javascript"></script>
 		<title>Beacon Jobs</title>
 	</head>
 	<body>
